--- a/config.yml
+++ b/config.yml
@@ -6,10 +6,10 @@
 
   
 default:
-  trial_data_dir: "/data/trials/"
-  pt_data_file: "/data/pt/ptdata.tsv"
+  trial_data_dir: "data/trials/"
+  pt_data_file: "data/pt/ptdata.tsv"
   docker: "no"
-  storage: "json"
+  storage: "db"
 
 
 test: 
