reading from json

--- a/config.yml
+++ b/config.yml
@@ -9,7 +9,7 @@ default:
   trial_data_dir: "data/trials/"
   pt_data_file: "data/pt/ptdata.tsv"
   docker: "no"
-  storage: "db"
+  storage: "json"
 
 
 test: 
@@ -17,4 +17,3 @@ test:
   pt_data_file: "data/pt/ptdata.tsv"
   docker: "no"
   storage: "json"
-
