reading from database with correct biomarker collapsed in reactable

--- a/config.yml
+++ b/config.yml
@@ -9,11 +9,11 @@ default:
   trial_data_dir: "data/trials/"
   pt_data_file: "data/pt/ptdata.tsv"
   docker: "no"
-  storage: "json"
+  storage: "db"
 
 
 test: 
   trial_data_dir: "data/trials"
   pt_data_file: "data/pt/ptdata.tsv"
   docker: "no"
-  storage: "json"
+  storage: "db"
